--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey. I'm a big heading</h1>
-<p>Hey. I am a paragraph element</p>
-<a href="https://google.com"target="_blank" title="lets go to google">click me im  a link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test page</title</title>
+</head>
+<body>
+	<h1>Hey. I'm a big heading</h1>
+	<p>Hey. I am a <bparagraph> element</p>
+	<a href="https://google.com"target="_blank" title="lets go to google">click me im  a link!</a>
+	<p>my name is:<br>
+	kitty cat</p>p>
+	<img src="img/cat.jpeg">
+</bparagraph>
+</html>
